--- a/App.xaml
+++ b/App.xaml
@@ -4,4 +4,8 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:ScreenRotationExclusion">
 
+    <Application.Resources>
+        <local:EnumToStringConverter x:Key="EnumToStringConverter" />
+    </Application.Resources>
+
 </Application>
